Fixed login dialogue image being too small on firefox

--- a/style.css
+++ b/style.css
@@ -770,9 +770,9 @@ html{
 #login-img{
     background-image: url("img/temp_bg.png");
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: local;
     background-position: 68% 65%;
-    background-size:40%;
+    background-size:100%;
 }
 
 #error-label{
